--- a/gameoflife-acceptance-tests/pom.xml
+++ b/gameoflife-acceptance-tests/pom.xml
@@ -69,8 +69,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
+                <version>2.19.1</version>
                 <configuration>
+                     <testFailureIgnore>true</testFailureIgnore>
+		</configuration>
+		</plugin>
                     <skip>false</skip>
                 </configuration>
             </plugin>
