--- a/gameoflife-acceptance-tests/pom.xml
+++ b/gameoflife-acceptance-tests/pom.xml
@@ -69,13 +69,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                     <testFailureIgnore>true</testFailureIgnore>
-		</configuration>
-		</plugin>
-                    <skip>false</skip>
-                </configuration>
+                <version>3.0.0-M5</version>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>5.5.2</version>
+                </dependency>
+            </dependencies>
+			
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
