--- a/gameoflife-core/pom.xml
+++ b/gameoflife-core/pom.xml
@@ -37,7 +37,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
+                 <version>3.0.0-M5</version>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>5.5.2</version>
+                </dependency>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
